K8S/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management #docker image
          ports:
              #rabbitmq management interface 
            - containerPort: 15672
              name: rmq-mgmt-port
              #rabbitmq messaging port
            - containerPort: 5672
              name: rmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
      #rabbitmq management ui accessible on http://localhost:15672
    - name: rmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
      #rabbitmq messaging accessible on http://localhost:5672
    - name: rmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
